--- a/templates/about.html
+++ b/templates/about.html
@@ -6,24 +6,23 @@
 	<meta name="description" content="Photo Gallery HTML Template">
 	<meta name="keywords" content="endGam,gGaming, magazine, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<!-- Favicon -->
+	<link href="../static/img/favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="../static/css/animate.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
+	<link rel="stylesheet" href="../static/css/style.css"/>
 
 	<!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -39,7 +38,7 @@
 
 	<!-- Top right elements -->
 	<div class="spacial-controls">
-		<div class="search-switch"><img src="img/search-icon.png" alt=""></div>
+		<div class="search-switch"><img src="../static/img/search-icon.png" alt=""></div>
 		<div class="nav-switch-warp">
 			<div class="nav-switch">
 				<div class="ns-bar"></div>
@@ -57,13 +56,13 @@
 				<div class="header-warp">
 					<h4 class="site-logo">
 AYALA'S ART GALLERY</h4> 
-				<img src="img/menu-icon.png" alt="" class="menu-icon">
+				<img src="../static/img/menu-icon.png" alt="" class="menu-icon">
 				<ul class="main-menu">
-					<li class="active"><a href="./home.html">Home</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./gallery-single.html">Single gallery</a></li>
-					<li><a href="./about.html">About Ayala</a></li>
-					<li><a href="./contact.html">Contact</a></li>
+					<li class="active"><a href="{{url_for('index')}}">Home</a></li>
+					<li><a href="{{url_for('gallery')}}">Gallery</a></li>
+					<li><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
+					<li><a href="{{url_for('about')}}">About Ayala</a></li>
+					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
 					<div class="copyright">Colorlib 2018  @ All rights reserved <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
@@ -74,29 +73,46 @@ AYALA'S ART GALLERY</h4>
 		<!-- header section end -->
 
 		<!-- Page section -->
-		<div class="page-section gallery-single-page">
-			<div class="gallery-single-warp">
+		<div class="page-section about-page">
+			<div class="about-warp">
 				<div class="row">
-					<div class="col-xl-6 p-0">
-						<div class="gallery-single-slider owl-carousel">
-							<img src="img/gallery/man.jpg" alt="">
-							<img src="img/gallery/frutis.jpg" alt="">
-						</div>
-					</div>
-					<div class="col-xl-6 p-0">
-						<div class="gallery-single-text">
+					<div class="col-xl-7 order-2 order-xl-1">
+						<div class="about-text">
 							<span>Photography</span>
-							<h2>Puppy Eyes</h2>
-							<ul>
-								<li><span>Client:</span>Company Name</li>
-								<li><span>Date:</span>August 25, 2018</li>
-								<li><span>Categorie:</span>Animal Photography</li>
-								<li><span>Tags:</span>animals, dogs, photography</li>
-							</ul>
+							<h2>About the Artist</h2>
 							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
-							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
+						</div>
+						<div class="milestones">
+							<div class="mileston">
+								<h2>34</h2>
+								<p>Major Clients</p>
+							</div>
+							<div class="mileston">
+								<h2>50</h2>
+								<p>Templates</p>
+							</div>
+							<div class="mileston">
+								<h2>12</h2>
+								<p>Years of Experience</p>
+							</div>
+							<div class="mileston">
+								<h2>3</h2>
+								<p>Awards</p>
+							</div>
+						</div>
+						<a href="" class="site-btn about-btn">Get in touch with me</a>
+					</div>
+					<div class="col-xl-4 offset-xl-1 order-1 order-xl-2 offset-0 pl-0">
+						<div class="about-image">
+							<img src="../static/img/about.jpg" alt="">
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="about-banner set-bg" data-setbg="../static/img/about-banner-bg.jpg">
+				<div class="ab-text text-white">
+					<h2>“Love of beauty is taste. The creation of beauty is art.</h2>
+					<p>Ralph Waldo Emerson</p>
 				</div>
 			</div>
 		</div>
@@ -116,14 +132,13 @@ AYALA'S ART GALLERY</h4>
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
-
+	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/owl.carousel.min.js"></script>
+	<script src="../static/js/jquery.nicescroll.min.js"></script>
+	<script src="../static/js/isotope.pkgd.min.js"></script>
+	<script src="../static/js/imagesloaded.pkgd.min.js"></script>
+	<script src="../static/js/circle-progress.min.js"></script>
+	<script src="../static/js/main.js"></script>
 	</body>
 </html>
