--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,13 +14,13 @@
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="../static/css/animate.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="../static/css/style.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -58,11 +58,11 @@
 				</a>
 				<img src="img/menu-icon.png" alt="" class="menu-icon">
 				<ul class="main-menu">
-					<li><a href="./home.html">Home</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./gallery-single.html">Single gallery</a></li>
-					<li class="active"><a href="./blog.html">Blog</a></li>
-					<li><a href="./contact.html">Contact</a></li>
+					<li class="active"><a href="{{url_for('index')}}">Home</a></li>
+					<li><a href="{{url_for('gallery')}}">Gallery</a></li>
+					<li><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
+					<li><a href="{{url_for('about')}}">About Ayala</a></li>
+					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				<div class="social-links-warp">
 					<div class="social-links">
@@ -131,14 +131,13 @@
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
-
+	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/owl.carousel.min.js"></script>
+	<script src="../static/js/jquery.nicescroll.min.js"></script>
+	<script src="../static/js/isotope.pkgd.min.js"></script>
+	<script src="../static/js/imagesloaded.pkgd.min.js"></script>
+	<script src="../static/js/circle-progress.min.js"></script>
+	<script src="../static/js/main.js"></script>
 	</body>
 </html>
