--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -9,22 +9,20 @@
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 
 	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="../static/img/favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../static/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../static/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="../static/css/animate.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
-
+	<link rel="stylesheet" href="../static/css/style.css"/>
 	<!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -39,7 +37,7 @@
 
 	<!-- Top right elements -->
 	<div class="spacial-controls">
-		<div class="search-switch"><img src="img/search-icon.png" alt=""></div>
+		<div class="search-switch"><img src="../static/img/search-icon.png" alt=""></div>
 		<div class="nav-switch-warp">
 			<div class="nav-switch">
 				<div class="ns-bar"></div>
@@ -57,13 +55,13 @@
 				<div class="header-warp">
 					<h4 class="site-logo">
 AYALA'S ART GALLERY</h4> 
-				<img src="img/menu-icon.png" alt="" class="menu-icon">
+				<img src="../static/img/menu-icon.png" alt="" class="menu-icon">
 				<ul class="main-menu">
-					<li class="active"><a href="./home.html">Home</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./gallery-single.html">Single gallery</a></li>
-					<li><a href="./about.html">About Ayala</a></li>
-					<li><a href="./contact.html">Contact</a></li>
+					<li class="active"><a href="{{url_for('index')}}">Home</a></li>
+					<li><a href="{{url_for('gallery')}}">Gallery</a></li>
+					<li><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
+					<li><a href="{{url_for('about')}}">About Ayala</a></li>
+					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
 					<div class="copyright">Colorlib 2018  @ All rights reserved <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
@@ -84,37 +82,37 @@ AYALA'S ART GALLERY</h4>
 			</ul>
 			<div class="portfolio-gallery">
 				<div class="gallery-item animals">
-					<img src="img/gallery/family.jpg" alt="">
+					<img src="../static/img/gallery/family.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
 				</div>
 				<div class="gallery-item nature">
-					<img src="img/gallery/angel.jpg" alt="">
+					<img src="../static/img/gallery/angel.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
 				</div>
 				<div class="gallery-item love">
-					<img src="img/gallery/man.jpg" alt="">
+					<img src="../static/img/gallery/man.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
 				</div>
 				<div class="gallery-item photo">
-					<img src="img/gallery/woman.jpg" alt="">
+					<img src="../static/img/gallery/woman.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
 				</div>
 				<div class="gallery-item nature">
-					<img src="img/gallery/sheep.jpg" alt="">
+					<img src="../static/img/gallery/sheep.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
 				</div>
 				<div class="gallery-item photo">
-					<img src="img/gallery/frutis.jpg" alt="">
+					<img src="../static/img/gallery/frutis.jpg" alt="">
 					<div class="hover-links">
 						<a href="" class="site-btn sb-light">Next</a>
 					</div>
@@ -138,14 +136,14 @@ AYALA'S ART GALLERY</h4>
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/owl.carousel.min.js"></script>
+	<script src="../static/js/jquery.nicescroll.min.js"></script>
+	<script src="../static/js/isotope.pkgd.min.js"></script>
+	<script src="../static/js/imagesloaded.pkgd.min.js"></script>
+	<script src="../static/js/circle-progress.min.js"></script>
+	<script src="../static/js/main.js"></script>
 
 	</body>
 </html>
