--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Photo Gallery HTML Template</title>
+	<title>Ayala Art Gallery</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Photo Gallery HTML Template">
 	<meta name="keywords" content="endGam,gGaming, magazine, html">
@@ -58,10 +58,10 @@
 AYALA'S ART GALLERY</h4> 
 				<img src="../static/img/menu-icon.png" alt="" class="menu-icon">
 				<ul class="main-menu">
-					<li class="active"><a href="{{url_for('index')}}">Home</a></li>
+					<li ><a href="{{url_for('index')}}">Home</a></li>
 					<li><a href="{{url_for('gallery')}}">Gallery</a></li>
 					<li><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
-					<li><a href="{{url_for('about')}}">About Ayala</a></li>
+					<li class="active"><a href="{{url_for('about')}}">About Ayala</a></li>
 					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
