--- a/templates/gallery-single.html
+++ b/templates/gallery-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Photo Gallery HTML Template</title>
+	<title>Ayala Art Gallery</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Photo Gallery HTML Template">
 	<meta name="keywords" content="endGam,gGaming, magazine, html">
@@ -58,9 +58,9 @@
 AYALA'S ART GALLERY</h4> 
 				<img src="../static/img/menu-icon.png" alt="" class="menu-icon">
 				<ul class="main-menu">
-					<li class="active"><a href="{{url_for('index')}}">Home</a></li>
+					<li><a href="{{url_for('index')}}">Home</a></li>
 					<li><a href="{{url_for('gallery')}}">Gallery</a></li>
-					<li><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
+					<li class="active"><a href="{{url_for('gallery_single')}}">Single gallery</a></li>
 					<li><a href="{{url_for('about')}}">About Ayala</a></li>
 					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
@@ -84,12 +84,12 @@ AYALA'S ART GALLERY</h4>
 					</div>
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
-							<span>Photography</span>
-							<h2>Puppy Eyes</h2>
+							<span>Selected Art Work</span>
+							<h2>Woman</h2>
 							<ul>
-								<li><span>Client:</span>Company Name</li>
+								<li><span>Artist:</span>Ayala Borten</li>
 								<li><span>Date:</span>August 25, 2018</li>
-								<li><span>Categorie:</span>Animal Photography</li>
+								<li><span>Category:</span>Animal Photography</li>
 								<li><span>Tags:</span>animals, dogs, photography</li>
 							</ul>
 							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
