--- a/templates/contact.html
+++ b/templates/contact.html
@@ -65,7 +65,7 @@ AYALA'S ART GALLERY</h4>
 					<li class="active"><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
-					<div class="copyright">Colorlib 2018  @ All rights reserved <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
+					<div class="copyright">@ 2020 <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
 					</div>
 			</div>
 		
