--- a/templates/gallery-single.html
+++ b/templates/gallery-single.html
@@ -65,7 +65,7 @@ AYALA'S ART GALLERY</h4>
 					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
-					<div class="copyright">Colorlib 2018  @ All rights reserved <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
+					<div class="copyright">@ 2020 <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
 					</div>
 			</div>
 		
@@ -89,8 +89,8 @@ AYALA'S ART GALLERY</h4>
 							<ul>
 								<li><span>Artist:</span>Ayala Borten</li>
 								<li><span>Date:</span>August 25, 2018</li>
-								<li><span>Category:</span>Animal Photography</li>
-								<li><span>Tags:</span>animals, dogs, photography</li>
+								<li><span>Category:</span>Person</li>
+								<li><span>Tags:</span>Art, Art, Art</li>
 							</ul>
 							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
 							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
