--- a/templates/about.html
+++ b/templates/about.html
@@ -65,7 +65,7 @@ AYALA'S ART GALLERY</h4>
 					<li><a href="{{url_for('contact')}}">Contact</a></li>
 				</ul>
 				
-					<div class="copyright">Colorlib 2018  @ All rights reserved <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
+					<div class="copyright">@ 2020 <br> Find us on <a href=""><i class="fa fa-facebook"><span style="font-family: 'Ubuntu', sans-serif;padding-top: 100px;margin-top: 100px;">acebook</span></i></a>
 					</div>
 			</div>
 		
@@ -78,9 +78,10 @@ AYALA'S ART GALLERY</h4>
 				<div class="row">
 					<div class="col-xl-7 order-2 order-xl-1">
 						<div class="about-text">
-							<span>Photography</span>
+							<span>Art Work</span>
 							<h2>About the Artist</h2>
-							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
+							<p>here we will write about ayala. what influences her, sudhujs
+							sjnfjn jnsj dsah chsx chasbd</p>
 						</div>
 						<div class="milestones">
 							<div class="mileston">
@@ -89,7 +90,7 @@ AYALA'S ART GALLERY</h4>
 							</div>
 							<div class="mileston">
 								<h2>50</h2>
-								<p>Templates</p>
+								<p>Works of art</p>
 							</div>
 							<div class="mileston">
 								<h2>12</h2>
@@ -100,7 +101,7 @@ AYALA'S ART GALLERY</h4>
 								<p>Awards</p>
 							</div>
 						</div>
-						<a href="" class="site-btn about-btn">Get in touch with me</a>
+						<a href="{{url_for('contact')}}" class="site-btn about-btn">Get in touch with me</a>
 					</div>
 					<div class="col-xl-4 offset-xl-1 order-1 order-xl-2 offset-0 pl-0">
 						<div class="about-image">
@@ -111,8 +112,8 @@ AYALA'S ART GALLERY</h4>
 			</div>
 			<div class="about-banner set-bg" data-setbg="../static/img/about-banner-bg.jpg">
 				<div class="ab-text text-white">
-					<h2>“Love of beauty is taste. The creation of beauty is art.</h2>
-					<p>Ralph Waldo Emerson</p>
+					<h2>“A qoute that you like"</h2>
+					<p>Ayala</p>
 				</div>
 			</div>
 		</div>
