--- a/templates/contact.html
+++ b/templates/contact.html
@@ -88,14 +88,15 @@ AYALA'S ART GALLERY</h4>
 								<button class="site-btn">Send message</button>
 							</form>
 							<div class="contac-info">
-								<p>Main Str, no 23, New York</p>
-								<p>+546 990221 123</p>
-								<p>hosting@contact.com</p>
+								<p>Address</p>
+								<p>phone number</p>
+								<p>ayala@gmail.com</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-xl-6 p-0">
-						<div class="map-warp"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe></div>
+						<img src="../static/img/gallery/man.jpg" alt="">
+
 					</div>
 				</div>
 			</div>
